truncated organizations names and reduced font size to avoid wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -60,4 +60,5 @@
 
 .organizations .row .orglink {
     color: #F5F9F9;
+    font-size: 13px;
 }
